Finally fixing *that* one flickering problem

--- a/labs/style.css
+++ b/labs/style.css
@@ -11,11 +11,18 @@
     top:30%;
     scale: 1.3;
   }
+}
+
+@media only screen and (width > 1000px) {
+  .grid > a > i {
+    top:50%;
+    scale: 1.2;
+  }
+}
+
+@media only screen and (width < 92rem) {
   .cards {
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    margin: 2vh;
+    grid-template-columns: 1fr;
   }
   .card {
     width: 90vw;
@@ -26,17 +33,10 @@
     height: 61vh;
   }
 }
-
-@media only screen and (width > 1000px) {
-  .grid > a > i {
-    top:50%;
-    scale: 1.2;
-  }
+@media only screen and (width > 92rem) {
   .cards {
-    flex-direction: row;
+    grid-template-columns: 1fr 1fr;
     height: 100%;
-    margin: 2vw;
-    flex-wrap: wrap;
   }
   .card {
     width: 45rem;
@@ -47,6 +47,7 @@
     height: 35.5rem;
   }
 }
+
 
 html, body {
   height: 100dvh;
@@ -87,18 +88,17 @@ html, body {
   color: white;
 
 }
-.header:hover {
-  background-size: 7vmin 7vmin;
-}
 .grid {
   background: linear-gradient(90deg, rgba(255, 255, 255,.25) 2px, transparent 2px),
-              linear-gradient(0deg, rgba(255, 255, 255,.25) 2px, transparent 2px),#1d57a0;
+  linear-gradient(0deg, rgba(255, 255, 255,.25) 2px, transparent 2px),#1d57a0;
   background-size: 5vmin 5vmin;
   background-position: 50% 50%;
   padding-bottom: min(2vmin,2vh);
   transition-duration: 200ms;
 }
-
+.header:hover > .grid {
+  background-size: 7vmin 7vmin;
+}
 .grid > a > i {
   position: absolute;
   left: 0;
@@ -131,33 +131,35 @@ html, body {
   margin: 0;
   transition-duration: 200ms;
 }
-
 .header:hover h1, .header:hover h2 {
   text-shadow: 0 0 20px #000000 ;
 }
+
 .cards {
   flex-shrink: 0;
+  width: 100%;
   height: auto;
   position: relative;
-  display: flex;
-  justify-content: center;
+  display: grid;
   gap: 2rem;
   z-index: 1;
-  margin-top: 2rem;
+  margin: 4vw;
 }
+
 .card {
   position: relative;
-  display: inline-block;
+  justify-self: center;
+  align-self: center;
   transition-duration: 200ms;
   border-radius: 1rem;
   box-sizing: border-box;
   overflow: hidden;
 }
-
 .card:hover {
   border-radius: .5rem;
-  box-shadow: 0 0 20px #C22BDF;
+  box-shadow: 0 0 20px #2b97df;
 }
+
 .overlay {
   position: absolute;
   bottom: 0;
@@ -177,7 +179,6 @@ html, body {
   font-family: 'Nunito', sans-serif;
   font-size: clamp(43px, 4vw, 2rem);
 }
-
 .overlay h2 {
   color: white;
   margin: 3rem;
